2004-04-05  Benjamin Otte  <otte@gnome.org>

	* gst/schedulers/gstbasicscheduler.c:
	(gst_basic_scheduler_pad_link):
	  fix to work with recent scheduling changes

2004-04-05  Benjamin Otte  <otte@gnome.org>

	* gst/schedulers/entryscheduler.c: (some functions, dunno which,
	prepareChangeLog doesn't work when cvs indents):
	  don't throw an error when no element can be scheduled, there's too
	  many weird reasons why it doesn't work. Return STOPPED instead.
	  decoupled elemts' schedulability doesn't depend on bufpens.

2004-04-04  Benjamin Otte  <otte@gnome.org>

	* gst/schedulers/gstbasicscheduler.c:
	(gst_basic_scheduler_pad_select):
	  fix uninitialized variable warnings

2004-04-04  Benjamin Otte  <otte@gnome.org>

	* gst/gstpad.c: (gst_pad_collect_valist):
	  fix uninitialized variable warning
	* gst/schedulers/entryscheduler.c: (schedule_forward):
	  fix shadowed variable

2004-04-04  Benjamin Otte  <otte@gnome.org>

	* gst/gstpad.c: (gst_pad_collect_array), (gst_pad_collectv),
	(gst_pad_collect), (gst_pad_collect_valist), (gst_pad_selectv),
	(gst_pad_select):
	* gst/gstpad.h:
	* gst/gstscheduler.c: (gst_scheduler_pad_select),
	(gst_scheduler_lock_element), (gst_scheduler_unlock_element):
	* gst/gstscheduler.h:
	  implement gst_pad_collect as replacement for gst_pad_select.
	  deprecate gst_pad_select and gst_scheduler_(un)lock_element
	  add new flag GST_SCHEDULER_FLAG_NEW_API for API that implements the
	  new pad_select, lock and unlock calls.
	* gst/cothreads.c: (cothread_destroy), (cothread_switch):
	* gst/cothreads.h:
	* gst/schedulers/cothreads_compat.h:
	* gst/schedulers/gthread-cothreads.h:
	  remove unused cothread_lock and cothread_unlock calls
	* gst/schedulers/entryscheduler.c:
	(gst_entry_scheduler_class_init), (gst_entry_scheduler_init),
	(_can_schedule_loop), (gst_entry_scheduler_get_handler),
	(gst_entry_scheduler_pad_select):
	  update to new API
	* gst/schedulers/gstbasicscheduler.c: